Fixed bug #44925 (preg_grep() modifies input array)